idea/testData/multiplatform/aliasesTypeMismatch/jvmLibrary/bindings.kt
actual typealias <!LINE_MARKER("descr='Has declaration in common module'")!>MyException<!> = platform.lib.MyException

actual typealias <!LINE_MARKER("descr='Has declaration in common module'")!>MyIllegalStateException<!> = platform.lib.MyIllegalStateException